# pudemy

./: .dockerignore  .env.sample  .flake8  .gitignore  Dockerfile  README.md  TASKS.md  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
.github/: main.yml
.github/workflows/: main.yml
api/: constants.py  pagination.py  permissions.py  serializers.py  tasks.py  urls.py  utils.py  validators.py  views.py  viewsets.py
lms/: admin.py  apps.py  constants.py  models.py
lms/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_coursesubscription.py  0004_alter_course_options_and_more.py  0005_alter_course_preview.py  0006_alter_lesson_preview.py  0007_course_price.py  0008_lesson_updated_at.py
nginx/: Dockerfile  nginx.conf
payments/: admin.py  constants.py  models.py
payments/fixtures/: payments.json
payments/migrations/: 0001_initial.py  0002_payment_stripe_session_id.py  0003_alter_payment_stripe_session_id.py
pudemy/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
tests/: test_courses_api.py  test_lessons_api.py  test_subscriptions_api.py
users/: admin.py  constants.py  managers.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
users/management/commands/: add_celery_task.py
users/migrations/: 0001_initial.py
